packages/es5-ext@4d7f742/test/error/valid-error.load.js
montageDefine("4d7f742","test/error/valid-error",{dependencies:[],factory:function(r,e,t){"use strict";t.exports=function(r,e){var t=new Error;e(r(t),t,"Error"),e["throws"](function(){r({})},"Other")}}});